Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <img src="https://media.tenor.com/fMP0pG46Vp4AAAAi/mocha-bear-hearts.gif" alt="Cute Bear">
         </div>
 
-        <h1 id="question">Will you be my Valentine?</h1>
+        <h1 id="question">Do you love me?</h1>
 
         <div class="btn-group">
-            <button id="yesBtn" class="yes-btn">Yes, absolutely!</button>
-            <button id="noBtn" class="no-btn">No way</button>
+            <button id="yesBtn" class="yes-btn">Yes!</button>
+            <button id="noBtn" class="no-btn">No</button>
         </div>
     </div>
 
@@ -121,7 +121,7 @@
 
         // Logic for "Yes"
         yesBtn.addEventListener('click', () => {
-            question.innerHTML = "Yay! See you on the 14th! ❤️";
+            question.innerHTML = "Yay! Bembang ka sakin ❤️";
             gifContainer.innerHTML = '<img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif" alt="Happy Bear">';
             document.querySelector('.btn-group').style.display = 'none';
         });
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
